# ot-harjoitustyo

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
Projekti/src/sample/: Controller.java  Main.java  sample.fxml
dokumentaatio/: arkkitehtuuri.md  changelog.md  testausdokumentti.md  tuntikirjanpito.md  tyokirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt  test.txt
laskarit/viikko2/Maksukortti/src/main/java/: Maksukortti.java
laskarit/viikko2/Maksukortti/src/test/java/: MaksukorttiTest.java
laskarit/viikko2/Unicafe/src/main/java/com/mycompany/unicafe/: Maksukortti.java
laskarit/viikko2/Unicafe/src/test/java/com/mycompany/unicafe/: KassapaateTest.java  MaksukorttiTest.java
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1-2.md  tehtava1-2.md.save  tehtava3.md
src/: equations.py  index.py  ui.py
src/service/: equations.py
src/tests/: equations_test.py
src/ui/: ui.py
