[tool.poetry]
name = "matikka sovellus"
version = "0.1.0"
description = ""
authors = ["Nikita Essine <nikita.essine@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
